--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Push Notification App</title>
+    <title>Add to Home Screen</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,73 +24,41 @@
             padding: 20px;
         }
 
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+        .container {
+            margin-top: 50px;
         }
 
-        button:hover {
-            background-color: #0056b3;
+        .mobile-only {
+            display: none;
+        }
+
+        #instruction {
+            font-size: 18px;
+            margin: 20px 0;
         }
     </style>
 </head>
 <body>
-    <h1>Push Notification App</h1>
-    <p>Klicke den Button, um eine Push-Benachrichtigung zu senden.</p>
-    <button id="notifyButton">Send Notification</button>
+    <div class="container">
+        <h1>Web-App hinzufügen</h1>
+        <p id="instruction" class="mobile-only">Bitte füge diese Seite zu deinem Home-Bildschirm hinzu, um sie als Web-App zu verwenden.</p>
+        <p class="desktop-only">Sie werden weitergeleitet...</p>
+    </div>
 
     <script>
-        const notifyButton = document.getElementById('notifyButton');
-
-        // Check for Notification API support
-        if (!('serviceWorker' in navigator)) {
-            alert('Service Worker wird nicht unterstützt.');
-        } else if (!('Notification' in window)) {
-            alert('Benachrichtigungen werden von diesem Browser nicht unterstützt.');
-        } else if (!('PushManager' in window)) {
-            alert('Push-Manager wird nicht unterstützt.');
-        } else {
-            console.log('Alles bereit für Push-Benachrichtigungen!');
+        // Function to detect if the user is on a mobile device
+        function isMobile() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
         }
 
-
-        notifyButton.addEventListener('click', () => {
-            // Check notification permission
-            if (Notification.permission === 'granted') {
-                // Show notification
-                showNotification();
-            } else if (Notification.permission === 'default') {
-                // Request permission from the user
-                Notification.requestPermission().then(permission => {
-                    if (permission === 'granted') {
-                        showNotification();
-                    } else {
-                        alert('Benachrichtigungsberechtigung wurde abgelehnt.');
-                    }
-                });
-            } else {
-                alert('Benachrichtigungen sind blockiert. Bitte aktiviere sie in den Browser-Einstellungen.');
-            }
-        });
-
-        function showNotification() {
-            const notification = new Notification('Hallo!', {
-                body: 'Dies ist eine Push-Benachrichtigung.',
-                icon: 'https://via.placeholder.com/100' // Replace with your own icon URL
-            });
-
-            // Optional: Handle click event on the notification
-            notification.onclick = () => {
-                window.focus();
-            };
+        // Redirect or show the add-to-home-screen instruction
+        if (isMobile()) {
+            document.querySelector('.mobile-only').style.display = 'block';
+            document.querySelector('.desktop-only').style.display = 'none';
+        } else {
+            window.location.href = 'index.html';
         }
     </script>
-</body>
+<body>
 </html>
 
