--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             document.querySelector('.mobile-only').style.display = 'block';
             document.querySelector('.desktop-only').style.display = 'none';
         } else {
-            window.location.href = 'index.html';
+            window.location.href = 'main.html';
         }
     </script>
 <body>
