--- a/main.html
+++ b/main.html
@@ -27,15 +27,100 @@
         button:hover {
             background-color: #0056b3;
         }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+            margin-top: 10px; /* Fügt Platz über dem Switch hinzu */
+        }
+
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked + .slider {
+            background-color: #007BFF;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(26px);
+        }
     </style>
 </head>
 <body>
     <h1>Push Notification App</h1>
     <p>Klicke den Button, um eine Push-Benachrichtigung zu senden.</p>
     <button id="notifyButton">Send Notification</button>
+    <button id="reloadButton">Reload App</button>
+    
+    <div>
+        <label class="switch">
+            <input type="checkbox" id="sharedSwitch">
+            <span class="slider"></span>
+        </label>
+        <p id="switchStatus">Schalter ist aus</p>
+    </div>
 
     <script>
         const notifyButton = document.getElementById('notifyButton');
+        const reloadButton = document.getElementById('reloadButton');
+        const sharedSwitch = document.getElementById('sharedSwitch');
+        const switchStatus = document.getElementById('switchStatus');
+
+        // Local Storage key
+        const SWITCH_KEY = 'sharedSwitchState';
+
+        // Load switch state on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedState = localStorage.getItem(SWITCH_KEY);
+            if (savedState === 'on') {
+                sharedSwitch.checked = true;
+                switchStatus.textContent = 'Schalter ist an';
+            } else {
+                sharedSwitch.checked = false;
+                switchStatus.textContent = 'Schalter ist aus';
+            }
+        });
+
+        // Update local storage and UI when switch is toggled
+        sharedSwitch.addEventListener('change', () => {
+            if (sharedSwitch.checked) {
+                localStorage.setItem(SWITCH_KEY, 'on');
+                switchStatus.textContent = 'Schalter ist an';
+            } else {
+                localStorage.setItem(SWITCH_KEY, 'off');
+                switchStatus.textContent = 'Schalter ist aus';
+            }
+        });
 
         // Check for Notification API support
         if (!('serviceWorker' in navigator)) {
@@ -66,6 +151,10 @@
             } else {
                 alert('Benachrichtigungen sind blockiert. Bitte aktiviere sie in den Browser-Einstellungen.');
             }
+        });
+
+        reloadButton.addEventListener('click', () => {
+            location.reload();
         });
 
         function showNotification() {
