--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-title" content="Push App">
 
     <!-- App-Icons für iOS (verschiedene Größen) -->
-    <link rel="apple-touch-icon" href="https://via.placeholder.com/180">
+    <link rel="apple-touch-icon" href="icons/app.png">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
