--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Push App">
 
+    <!-- App-Icons für iOS (verschiedene Größen) -->
+    <link rel="apple-touch-icon" href="icons/app.png">
+
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
@@ -16,6 +19,7 @@
     <title>Add to Home Screen</title>
     <style>
         body {
+            background-color: #383838;
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
