--- a/room_4.html
+++ b/room_4.html
@@ -3,6 +3,7 @@
 
 
 <head>
+    <meta name="theme-color" content="#007BFF">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wohnzimmer</title>
