--- a/room_1.html
+++ b/room_1.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <meta name="theme-color" content="#007BFF">
+    <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wohnzimmer</title>
