--- a/room_0.html
+++ b/room_0.html
@@ -20,15 +20,11 @@
 
 <body>
     <div class="heading">
-        <h1>Wohnzimmer</h1>
-    </div>
-
-    <div class="symbol">
-        <img src="icons/room_0_selected.png">
+        <h1>Flur</h1>
     </div>
 
     <div class="description">
-        <p>hier erscheinen deine Chats...</p>
+        <p>Jona - Noch 1d 5h 5m 5s Zeit</p>
     </div>
 
 
