--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <div class="container">
         <h1>Web-App hinzufügen</h1>
         <p id="instruction" class="mobile-only">Bitte füge diese Seite zu deinem Home-Bildschirm hinzu, um sie als Web-App zu verwenden.</p>
-        <p class="desktop-only">Sie werden weitergeleitet...</p>
+        <p class="desktop-only">Bitte füge diese Seite zu deinem Home-Bildschirm auf deinem Smartphone hinzu, um sie als Web-App zu verwenden.</p>
+        <img src="icons/qr_code.png" alt="Scan this code with your phone!" style="width:auto;height:90vw; margin-top: 1vh;">
+
     </div>
 
     <script>
@@ -56,9 +58,9 @@
         // Redirect or show the add-to-home-screen instruction
         if (isMobile()) {
             document.querySelector('.mobile-only').style.display = 'block';
-            document.querySelector('.desktop-only').style.display = 'none';
+            document.querySelector('.desktop-only').style.display = 'block';
         } else {
-            window.location.href = 'room_0.html';
+            //window.location.href = 'room_0.html';
         }
     </script>
 <body>
