--- a/room_0.html
+++ b/room_0.html
@@ -33,7 +33,7 @@
             <a href="room_1.html"><img src="icons/room_1.png"></a>
             <a href="room_2.html"><img src="icons/room_2.png"></a>
             <a href="room_3.html"><img src="icons/room_3.png"></a>
-            <a href="room_4.html"><img src="icons/room_4.png"></a>
+            <a href="test.html"><img src="icons/room_4.png"></a>
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
