--- a/test.html
+++ b/test.html
@@ -37,7 +37,18 @@
             return timeString.trim();
         }
 
-        function calculateTime() {
+        function formatTime(days, hours, minutes, seconds) {
+          // Entferne die überflüssigen Teile
+          let timeString = '';
+          if (days > 0) timeString += `${days}d `;
+          if (hours > 0 || days > 0) timeString += `${hours}h `;
+          if (minutes > 0 || hours > 0 || days > 0) timeString += `${minutes}m `;
+          timeString += `${seconds}s`;
+
+          return timeString.trim();
+      }
+
+      function calculateTime() {
           const now = new Date();
           const currentDay = now.getDay(); // 0 = Sonntag, 1 = Montag, ..., 6 = Samstag
           const currentHour = now.getHours();
@@ -58,7 +69,7 @@
           lastMonday12_20PM.setDate(now.getDate() - (currentDay + 6) % 7); // Letzter Montag
           lastMonday12_20PM.setHours(12, 20, 0, 0); // Montag 12:20
 
-          let finished = false; // Beispielvariable
+          let finished = true; // Beispielvariable
 
           if (currentDay >= 5 || (currentDay === 4 && (currentHour > 9 || (currentHour === 9 && currentMinute >= 0)))) {
               // Fall 1: Zwischen Freitag 9:00 und Montag 12:20
@@ -83,22 +94,24 @@
               if (finished) {
                   // Berechne die vergangene Zeit seit dem letzten Montag 12:20
                   const timeDiff = now - lastMonday12_20PM;
-                  const days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
-                  const hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                  const minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60));
-                  const seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
+                  const days = Math.floor(timeDiff / (1000 * 60 * 60 * 24)); // Tage
+                  const hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)); // Stunden
+                  const minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60)); // Minuten
+                  const seconds = Math.floor((timeDiff % (1000 * 60)) / 1000); // Sekunden
+
                   document.getElementById("zeitdifferenz").textContent = formatTime(days, hours, minutes, seconds);
               } else {
                   // Zeige Zeit bis Freitag
                   const timeDiffToFriday = friday9AM - now;
-                  const days = Math.floor(timeDiffToFriday / (1000 * 60 * 60 * 24));
-                  const hours = Math.floor((timeDiffToFriday % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                  const minutes = Math.floor((timeDiffToFriday % (1000 * 60 * 60)) / (1000 * 60));
-                  const seconds = Math.floor((timeDiffToFriday % (1000 * 60)) / 1000);
+                  const days = Math.floor(timeDiffToFriday / (1000 * 60 * 60 * 24)); // Tage
+                  const hours = Math.floor((timeDiffToFriday % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)); // Stunden
+                  const minutes = Math.floor((timeDiffToFriday % (1000 * 60 * 60)) / (1000 * 60)); // Minuten
+                  const seconds = Math.floor((timeDiffToFriday % (1000 * 60)) / 1000); // Sekunden
                   document.getElementById("zeitdifferenz").textContent = formatTime(days, hours, minutes, seconds);
-                }
-            }
-        }
+              }
+          }
+      }
+
 
 
         // Berechne die Zeitdifferenz beim Laden der Seite
