--- a/room_0.html
+++ b/room_0.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="de">
-
-
 <head>
     <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
@@ -12,13 +10,12 @@
     <style>
     body {
         background-image: url("backgrounds/room_0.jpg");
-        background-size: 150%
+        background-size: 150%;
     }
     </style>
+    <script src="script.js"></script>
 </head>
-
-
-<body>
+<body data-room="room_0">
     <div class="heading">
         <h1>Flur</h1>
     </div>
@@ -33,90 +30,10 @@
             <a href="room_1.html"><img src="icons/room_1.png"></a>
             <a href="room_2.html"><img src="icons/room_2.png"></a>
             <a href="room_3.html"><img src="icons/room_3.png"></a>
-            <a href="test.html"><img src="icons/room_4.png"></a>
+            <a href="room_4.html"><img src="icons/room_4.png"></a>
+        </div>
     </footer>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Listen von Personen und Räumen
-            const personen = ['Jona', 'Jan', 'Nicoll', 'Sascha', 'Leonie'];
-            const raeume = ['room_0', 'room_1', 'room_2', 'room_3', 'room_4'];
 
-            // Berechnet die Kalenderwoche basierend auf dem Datum
-            function getISOWeek(date) {
-                const tempDate = new Date(date.getTime());
-                tempDate.setDate(tempDate.getDate() - tempDate.getDay() + 5); // Setze auf den ersten Montag
-                const firstMonday = new Date(tempDate.getFullYear(), 0, 1);
-                const dayOfYear = Math.floor((tempDate - firstMonday) / (1000 * 3600 * 24));
-                return Math.floor(dayOfYear / 7) + 1;
-            }
-
-            // Berechnet die Person basierend auf dem aktuellen Datum und der Woche
-            function getPersonBasedOnTimeAndRoom(room) {
-                const unixTimestamp = Math.floor(Date.now() / 1000);  // Unix-Zeit in Sekunden
-                const date = new Date(unixTimestamp * 1000);  // Unix-Zeitstempel in Datum umwandeln
-                const currentWeek = getISOWeek(date);  // Korrekte Kalenderwoche berechnen
-                const roomIndex = raeume.indexOf(room);  // Finde den Index des Raums in der Liste
-                const personIndex = (roomIndex + currentWeek) % personen.length;  // Berechne den Person-Index je nach Woche
-
-                return personen[personIndex];
-            }
-
-            function calculateTime(finished) {
-                const now = new Date();
-
-                // Create Friday 9:00 and Monday 12:20 dates for comparison
-                const fridayMorning = new Date(now);
-                fridayMorning.setDate(now.getDate() + ((5 - now.getDay() + 7) % 7));
-                fridayMorning.setHours(9, 0, 0, 0);
-
-                const mondayNoon = new Date(now);
-                mondayNoon.setDate(now.getDate() + ((1 - now.getDay() + 7) % 7));
-                mondayNoon.setHours(12, 20, 0, 0);
-
-                let targetTime, delta;
-
-                if (now >= fridayMorning && now < mondayNoon) {
-                    // Case 1: Between Friday 9:00 and Monday 12:20
-                    targetTime = mondayNoon;
-                    delta = targetTime - now;
-                } else {
-                    // Case 2: Between Monday 12:20 and Friday 9:00
-                    if (now < fridayMorning) {
-                        targetTime = fridayMorning;
-                        delta = finished ? now - mondayNoon : targetTime - now;
-                    } else {
-                        // Adjust for past the current week's Friday
-                        const nextMondayNoon = new Date(mondayNoon);
-                        nextMondayNoon.setDate(mondayNoon.getDate() + 7);
-                        targetTime = nextMondayNoon;
-                        delta = targetTime - now;
-                    }
-                }
-
-                return formatDelta(delta);
-            }
-
-            function formatDelta(delta) {
-                const seconds = Math.floor(delta / 1000) % 60;
-                const minutes = Math.floor(delta / (1000 * 60)) % 60;
-                const hours = Math.floor(delta / (1000 * 60 * 60)) % 24;
-                const days = Math.floor(delta / (1000 * 60 * 60 * 24));
-
-                const parts = [];
-                if (days > 0) parts.push(`${days}d`);
-                if (hours > 0) parts.push(`${hours}h`);
-                if (minutes > 0 || parts.length > 0) parts.push(`${minutes}m`);
-                if (seconds > 0 || parts.length > 0) parts.push(`${seconds}s`);
-
-                return parts.join(' ');
-            }
-
-            // Funktion für die manuelle Eingabe eines Raums
-            const person = getPersonBasedOnTimeAndRoom("room_0");
-            const time = calculateTime(true);
-
-            document.getElementById("output").innerText = `${person} - Noch ${time} Zeit`;
-        });
-    </script>
+    <script src="subtitle.js"></script>
 </body>
 </html>
