--- a/room_0.html
+++ b/room_0.html
@@ -13,7 +13,6 @@
         background-size: 150%;
     }
     </style>
-    <script src="script.js"></script>
 </head>
 <body data-room="room_0">
     <div class="heading">
@@ -22,7 +21,21 @@
 
     <div class="description">
         <p id="output"></p>
-    </div>    
+    </div>
+
+    <div class="task-list-container">
+        <ul class="task-list">
+          <li>Pflanzengießen</li>
+          <li>Decke entstauben</li>
+          <li>Boden wischen</li>
+          <li>Fenster putzen</li>
+          <li>Staub saugen</li>
+          <li>Staub saugen</li>
+          <li>Staub saugen</li>
+          <!-- Weitere Listeneinträge -->
+        </ul>
+      </div>
+      
 
     <footer>
         <div id="navigation">
