--- a/room_1.html
+++ b/room_1.html
@@ -27,7 +27,18 @@
         <p id="output"></p>
     </div>   
 
-
+    <div class="task-list-container">
+        <ul class="task-list">
+          <li>Pflanzengießen</li>
+          <li>Decke entstauben</li>
+          <li>Boden wischen</li>
+          <li>Fenster putzen</li>
+          <li>Staub saugen</li>
+          <li>Staub saugen</li>
+          <li>Staub saugen</li>
+          <!-- Weitere Listeneinträge -->
+        </ul>
+      </div>
 
     <footer>
         <div id="navigation">
