Commleted task-list

--- a/room_0.html
+++ b/room_0.html
@@ -25,13 +25,11 @@
 
     <div class="task-list-container">
         <ul class="task-list">
+          <li>Aufräumen</li>
           <li>Pflanzengießen</li>
           <li>Decke entstauben</li>
+          <li>Lichtschalter entstauben</li>
           <li>Boden wischen</li>
-          <li>Fenster putzen</li>
-          <li>Staub saugen</li>
-          <li>Staub saugen</li>
-          <li>Staub saugen</li>
           <!-- Weitere Listeneinträge -->
         </ul>
       </div>
