--- a/room_3.html
+++ b/room_3.html
@@ -29,13 +29,14 @@
 
     <div class="task-list-container">
         <ul class="task-list">
-          <li>Pflanzengießen</li>
+          <li>Mülleimer reinigen</li>
+          <li>Wasserkocher entkalken</li>
+          <li>Toaster entkrümeln</li>
+          <li>Spümaschiensumpf reinigen</li>
+          <li>Kaffeemaschine reinigen (3 Wochen)</li>
+          <li>DAH-Gitter in die Spümaschiene (6 Wochen)</li>
           <li>Decke entstauben</li>
           <li>Boden wischen</li>
-          <li>Fenster putzen</li>
-          <li>Staub saugen</li>
-          <li>Staub saugen</li>
-          <li>Staub saugen</li>
           <!-- Weitere Listeneinträge -->
         </ul>
       </div>
