--- a/room_3.html
+++ b/room_3.html
@@ -43,6 +43,7 @@
 
     <footer>
         <div id="navigation">
+            <a href="room_5.html"><img src="icons/room_5.png"></a>
             <a href="room_0.html"><img src="icons/room_0.png"></a>
             <a href="room_1.html"><img src="icons/room_1.png"></a>
             <a href="room_2.html"><img src="icons/room_2.png"></a>
