--- a/room_5.html
+++ b/room_5.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="de">
+
+
 <head>
     <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wohnzimmer</title>
-    <link rel="icon" type="image/x-icon" href="icons/room_0_selected.png">
+    <link rel="icon" type="image/x-icon" href="icons/room_3_selected.png">
     <link rel="stylesheet" href="style.css">
     <style>
     body {
-        background-image: url("backgrounds/room_0.jpg");
-        background-size: 150%;
+        background-image: url("backgrounds/room_4.jpg");
+        background-size: 150%
     }
     </style>
 </head>
-<body data-room="room_0">
-    <div class="heading">
-        <h1>Flur</h1>
-    </div>
 
-    <div class="description">
-        <p id="output"></p>
+
+<body data-room="room_4">
+    <div class="heading">
+        <h1>Generell</h1>
     </div>
+ 
 
     <div class="task-list-container">
         <ul class="task-list">
-          <li>Aufräumen</li>
           <li>Pflanzengießen</li>
           <li>Decke entstauben</li>
-          <li>Lichtschalter entstauben</li>
           <li>Boden wischen</li>
-          <!-- Weitere Listeneinträge -->
         </ul>
       </div>
-      
 
     <footer>
         <div id="navigation">
-            <a href="room_5.html"><img src="icons/room_5.png"></a>
-            <a href="room_0.html"><img src="icons/room_0_selected.png"></a>
+            <a href="room_5.html"><img src="icons/room_5_selected.png"></a>
+            <a href="room_0.html"><img src="icons/room_0.png"></a>
             <a href="room_1.html"><img src="icons/room_1.png"></a>
             <a href="room_2.html"><img src="icons/room_2.png"></a>
             <a href="room_3.html"><img src="icons/room_3.png"></a>
             <a href="room_4.html"><img src="icons/room_4.png"></a>
-        </div>
     </footer>
 
-    <script src="subtitle.js"></script>
 </body>
 </html>
