user.html is now working and the java scripts got splited

--- a/room_0.html
+++ b/room_0.html
@@ -4,7 +4,7 @@
     <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wohnzimmer</title>
+    <title>Flur</title>
     <link rel="icon" type="image/x-icon" href="icons/room_0_selected.png">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -47,5 +47,7 @@
     </footer>
 
     <script src="subtitle.js"></script>
+    <script src="animation.js"></script>
+    <script src="calculate.js"></script>
 </body>
 </html>
