--- a/room_1.html
+++ b/room_1.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wohnzimmer</title>
+    <title>Badezimmer</title>
     <link rel="icon" type="image/x-icon" href="icons/room_1_selected.png">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -46,6 +46,8 @@
             <a href="room_4.html"><img src="icons/room_4.png"></a>
     </footer>
     <script src="subtitle.js"></script>
+    <script src="animation.js"></script>
+    <script src="calculate.js"></script>
 
 </body>
 </html>
