--- a/room_2.html
+++ b/room_2.html
@@ -46,6 +46,8 @@
             <a href="room_4.html"><img src="icons/room_4.png"></a>
     </footer>
     <script src="subtitle.js"></script>
+    <script src="animation.js"></script>
+    <script src="calculate.js"></script>
 
 </body>
 </html>
