--- a/room_3.html
+++ b/room_3.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wohnzimmer</title>
+    <title>Küche</title>
     <link rel="icon" type="image/x-icon" href="icons/room_3_selected.png">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -32,9 +32,9 @@
           <li>Mülleimer reinigen</li>
           <li>Wasserkocher entkalken</li>
           <li>Toaster entkrümeln</li>
-          <li>Spümaschiensumpf reinigen</li>
+          <li>Spülmaschiensumpf reinigen</li>
           <li>Kaffeemaschine reinigen (3 Wochen)</li>
-          <li>DAH-Gitter in die Spümaschiene (6 Wochen)</li>
+          <li>DAH-Gitter in die Spülmaschiene (6 Wochen)</li>
           <li>Decke entstauben</li>
           <li>Boden wischen</li>
           <!-- Weitere Listeneinträge -->
@@ -51,6 +51,8 @@
             <a href="room_4.html"><img src="icons/room_4.png"></a>
     </footer>
     <script src="subtitle.js"></script>
+    <script src="animation.js"></script>
+    <script src="calculate.js"></script>
 
 </body>
 </html>
