--- a/room_5.html
+++ b/room_5.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#383838">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wohnzimmer</title>
+    <title>Generell</title>
     <link rel="icon" type="image/x-icon" href="icons/room_3_selected.png">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -26,9 +26,15 @@
 
     <div class="task-list-container">
         <ul class="task-list">
-          <li>Pflanzengießen</li>
-          <li>Decke entstauben</li>
-          <li>Boden wischen</li>
+          <li>Saugen zwischendurch</li>
+          <li>Tisch abwischen</li>
+          <li>Selbest Betten beziehen</li>
+          <li>Wäsche waschen (S & N)</li>
+          <li>Einkaufen (S & N)</li>
+          <li>Wasserfilter reinigen (S & N)</li>
+          <li>Tonnen rausstellen (S)</li>
+          <li>Fesnster putzen (6 Wochen)</li>
+          <li>Heizung putzen (1 Jahr)</li>
         </ul>
       </div>
 
@@ -41,6 +47,7 @@
             <a href="room_3.html"><img src="icons/room_3.png"></a>
             <a href="room_4.html"><img src="icons/room_4.png"></a>
     </footer>
+    <script src="animation.js"></script>
 
 </body>
 </html>
